Add comment for weight function.

--- a/src/typography/_weight.scss
+++ b/src/typography/_weight.scss
@@ -1,3 +1,4 @@
+// Keyword-based font-weights
 @function weight($keyword) {
   @if      $keyword == thin                           { @return 100; }
   @else if $keyword == extralight                     { @return 200; }
