Fix missing loading of simple-grid mixin file.

--- a/src/garnish.scss
+++ b/src/garnish.scss
@@ -6,6 +6,7 @@
 // layout
 @import "layout/margin";
 @import "layout/padding";
+@import "layout/simple-grid";
 
 // typography
 @import "typography/hyphenated";
